Closed
Bug 577268
(spelling-nss)
Opened 16 years ago
Closed 15 years ago
Correct misspellings in NSS source code
Categories
(NSS :: Libraries, defect, P3)
NSS
Libraries
Tracking
(Not tracked)
RESOLVED
FIXED
3.13
People
(Reporter: mkohler, Assigned: mkohler)
Details
(Whiteboard: [please read comment 0 first!])
Attachments
(1 file)
|
14.09 KB,
patch
|
nelson
:
review+
|
Details | Diff | Splinter Review |
This bug is dedicated to misspellings in the NSS product. Please only add new misspellings here, if they are not present in other products (see bug 577266 for general misspellings).
| Assignee | ||
Comment 1•16 years ago
|
||
* paramter -> parameter
Attachment #456271 -
Flags: review?(nelson)
Updated•16 years ago
|
Priority: -- → P3
Target Milestone: --- → 3.13
Comment 2•16 years ago
|
||
Comment on attachment 456271 [details] [diff] [review]
Patch 1.1
r=nelson
Attachment #456271 -
Flags: review?(nelson) → review+
| Assignee | ||
Updated•15 years ago
|
Assignee: michaelkohler → nobody
Status: ASSIGNED → NEW
Comment 4•15 years ago
|
||
Bug 577268 Correct misspellings of parameter and function in NSS source code
Patch contributed by Michael Kohler [:michaelkohler] michaelkohler@linux.com
r=nelson
Assignee: nobody → michaelkohler
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Updated•15 years ago
|
Keywords: checkin-needed
You need to log in
before you can comment on or make changes to this bug.
Description
•