Bug 577268  Correct misspellings of parameter and function in NSS source code Patch contributed by Michael Kohler [:michaelkohler] michaelkohler@linux.com r=nelson